# gd-linux-picker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mod.json
src/: gd-file-picker.cpp  gd-file-picker.h  main.cpp  proxy.cpp  proxy.hpp  winepath.cpp  winepath.hpp
starter-proxy/: Makefile  build.sh  main.c
